Fixed alignment of a value proposition

--- a/src/styles/homeStyles.css
+++ b/src/styles/homeStyles.css
@@ -130,7 +130,7 @@
 .ValueProp1 h5{
   position: absolute;
   left: 150px;
-  top: 150px;
+  top: 140px;
   width: 300px;
   height: 100px;
   text-align: center;
